--- a/css/style.scss
+++ b/css/style.scss
@@ -1,34 +1,20 @@
-$main_color: #333333;
-$sub_color: #ffffff;
-$font_size: 1.6rem;
-$font_logo: 'Allura', cursive;
+@import 'common';
+@import 'about';
 
-html {
-  color: $main_color;
-  font-size: 62.5%;
-  font-family: '游ゴシック体', YuGothic, '游ゴシック Medium', 'Yu Gothic Medium',
-    '游ゴシック', 'Yu Gothic', sans-serif;
-}
-
-header {
+.top-header {
   height: 0;
   /* 表示画像の高さ ÷ 表示画像の幅 × 100 */
   padding-top: 52.17%;
   margin-bottom: 32px;
-  background-image: url(../Image/Home-Mainvisual.jpg);
+  background-image: url(../Image/Top-Mainvisual.jpg);
   background-size: cover;
   position: relative;
-}
-
-img {
-  max-width: 100%;
 }
 
 h1 {
   color: $sub_color;
   font-family: $font_logo;
   font-size: clamp(3.2rem, 30vw, 6rem);
-  margin-bottom: 24px;
 }
 
 h2 {
@@ -49,31 +35,7 @@ p {
   text-align: left;
 }
 
-nav {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  border: 1px solid #333333;
-  background-color: $sub_color;
-  ul {
-    display: flex;
-    justify-content: space-around;
-    margin: 12px auto;
-    li {
-      &.text {
-        font-family: $font_logo;
-        font-size: $font_size;
-      }
-      span {
-        &.material-icons {
-          font-size: 3rem;
-        }
-      }
-    }
-  }
-}
-.navigation-btn {
+.nav-btn {
   text-align: center;
 }
 
@@ -101,7 +63,9 @@ nav {
 
 .top-about {
   text-align: center;
-  padding: 0 5vw 64px;
+  max-width: 640px;
+  padding: 0 10vw 64px;
+  margin: 0 auto;
   &-prof {
     width: 200px;
     margin-bottom: 16px;
@@ -118,11 +82,16 @@ nav {
     justify-content: space-between;
     margin: 0 auto 32px;
   }
+  &-para {
+    margin-bottom: 32px;
+  }
 }
 
 .top-ytworks {
   text-align: center;
+  max-width: 640px;
   padding: 0 10vw 64px;
+  margin: 0 auto;
   &-para {
     margin-bottom: 32px;
   }
@@ -134,55 +103,49 @@ nav {
 
 .top-vpworks {
   text-align: center;
+  max-width: 640px;
   padding: 0 10vw 96px;
+  margin: 0 auto;
   &-para {
     margin-bottom: 32px;
   }
 }
 
-footer {
-  background-color: $main_color;
-  margin-bottom: 76px;
-  padding: 12px 0;
-  text-align: center;
-  div {
-    display: flex;
-    width: 150px;
-    justify-content: space-between;
-    margin: 0 auto 12px;
-    li {
-      display: inline-block;
-      width: 36px;
-      height: 36px;
-      background-color: $sub_color;
-      border-radius: 50%;
-      i {
-        color: $main_color;
-        font-size: 1.6rem;
-        padding: 10px;
-      }
-    }
-  }
-  small {
-    color: $sub_color;
-    font-size: 1.2rem;
-  }
-}
-
-.btn {
-  display: inline-block;
-  font-size: 1.6rem;
-  text-align: center;
-  line-height: 1em;
-  cursor: pointer;
-  color: $sub_color;
-  background: $main_color;
-  padding: 12px 0;
-
-  width: 160px;
-  height: 40px;
-}
-
 .thumbnail {
   margin-bottom: 32px;
+}
+
+@media screen and (min-width: 1025px) {
+  .nav {
+    position: absolute;
+    top: 0;
+    display: inline-block;
+    width: 60vw;
+    background-color: transparent;
+    border: none;
+    margin-left: 40vw;
+    &-icon {
+      display: none;
+    }
+    &-text {
+      font-family: '游ゴシック体', YuGothic, '游ゴシック Medium',
+        'Yu Gothic Medium', '游ゴシック', 'Yu Gothic', sans-serif;
+      font-size: 1.4rem;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: $sub_color;
+      text-shadow: 1px 1px 2px $main_color;
+    }
+  }
+  .ytworks-btn {
+    display: flex;
+    padding: 0 auto;
+  }
+  .btn-YT {
+    margin: 0 0 0 32px;
+  }
+
+  footer {
+    margin: 0;
+  }
 }
