--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,34 @@ footer small {
   position: relative;
 }
 
+.wrapper {
+  padding: 0 10vw;
+  max-width: 640px;
+}
+
+.sitelogo-top {
+  font-family: "Allura", cursive;
+  font-size: clamp(3.2rem, 30vw, 6rem);
+}
+
+.sitelogo-bottom {
+  font-family: "Allura", cursive;
+  font-size: clamp(3.2rem, 30vw, 6rem);
+}
+
+.title-top {
+  font-family: "Allura", cursive;
+  font-size: 3.6rem;
+  margin-bottom: 8px;
+}
+
+.title-bottom {
+  font-family: "Allura", cursive;
+  font-size: 3.6rem;
+  padding: 0 10vw 0;
+  margin-bottom: 24px;
+}
+
 .btn {
   display: inline-block;
   font-size: 1.6rem;
@@ -99,9 +127,7 @@ footer small {
 }
 
 .about {
-  padding: 0 10vw 64px;
-  margin: 0 auto 50px;
-  max-width: 640px;
+  margin: 0 auto 64px;
   position: relative;
 }
 
@@ -129,7 +155,7 @@ footer small {
 
 .career {
   font-size: 1.6rem;
-  padding: 0 10vw 64px;
+  margin-bottom: 64px;
 }
 
 .career-ivent {
@@ -142,7 +168,29 @@ footer small {
 
 .media {
   font-size: 1.6rem;
-  padding: 0 10vw 96px;
+  margin: 0 auto 96px;
+}
+
+.container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (100%)[1];
+      grid-template-columns: repeat(1, 100%);
+  row-gap: 32px;
+  margin-bottom: 32px;
+}
+
+.works-para {
+  margin-bottom: 32px;
+}
+
+@media screen and (min-width: 1025px) {
+  .container {
+    -ms-grid-columns: (50%)[2];
+        grid-template-columns: repeat(2, 50%);
+    -webkit-column-gap: 32px;
+            column-gap: 32px;
+  }
 }
 
 .top-header {
@@ -153,18 +201,6 @@ footer small {
   background-image: url(../Image/Top-Mainvisual.jpg);
   background-size: cover;
   position: relative;
-}
-
-h1 {
-  color: #ffffff;
-  font-family: "Allura", cursive;
-  font-size: clamp(3.2rem, 30vw, 6rem);
-}
-
-h2 {
-  font-family: "Allura", cursive;
-  font-size: 3.6rem;
-  margin-bottom: 8px;
 }
 
 h3 {
@@ -213,9 +249,7 @@ p {
 
 .top-about {
   text-align: center;
-  max-width: 640px;
-  padding: 0 10vw 64px;
-  margin: 0 auto;
+  margin: 0 auto 64px;
 }
 
 .top-about-prof {
@@ -247,9 +281,7 @@ p {
 
 .top-ytworks {
   text-align: center;
-  max-width: 640px;
-  padding: 0 10vw 64px;
-  margin: 0 auto;
+  margin: 0 auto 64px;
 }
 
 .top-ytworks-para {
@@ -262,9 +294,7 @@ p {
 
 .top-vpworks {
   text-align: center;
-  max-width: 640px;
-  padding: 0 10vw 96px;
-  margin: 0 auto;
+  margin: 0 auto 96px;
 }
 
 .top-vpworks-para {
