--- a/css/_common.scss
+++ b/css/_common.scss
@@ -22,6 +22,7 @@ img {
   width: 100%;
   border: 1px solid #333333;
   background-color: $sub_color;
+  z-index: 9999;
   &-list {
     display: flex;
     justify-content: space-around;
@@ -88,7 +89,12 @@ footer {
   }
   &-bottom {
     font-family: $font_logo;
-    font-size: clamp(3.2rem, 30vw, 6rem);
+    color: $sub_color;
+    text-shadow: 1px 1px 2px $main_color;
+    font-size: calc(6rem + (10 - 6) * ((100vw - 30rem) / (120 - 30)));
+    position: absolute;
+    top: 10px;
+    left: 10vw;
   }
 }
 
