--- a/css/_works.scss
+++ b/css/_works.scss
@@ -1,17 +1,30 @@
 .container {
   display: grid;
-  grid-template-columns: repeat(1, 100%);
+  grid-template-columns: repeat(1, 1fr);
   row-gap: 32px;
   margin-bottom: 32px;
 }
 
-.works-para {
-  margin-bottom: 32px;
+.works {
+  &-para {
+    margin-bottom: 32px;
+  }
+}
+
+.bottom {
+  &-ytworks {
+    margin: 0 auto 64px;
+    text-align: center;
+  }
+  &-vpworks {
+    margin: 0 auto 96px;
+    text-align: center;
+  }
 }
 
 @media screen and (min-width: 1025px) {
   .container {
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 1fr);
     column-gap: 32px;
   }
 }
