--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,7 @@
 @import 'common';
 @import 'about';
 @import 'works';
+@import 'contact';
 
 .top-header {
   height: 0;
@@ -31,8 +32,15 @@ p {
 .prof {
   position: absolute;
   top: 8vw;
-  left: 10px;
+  left: 10vw;
   color: $sub_color;
+  text-shadow: 1px 1px 2px $main_color;
+
+  &-list {
+    border-left: 3px solid $sub_color;
+    text-shadow: 1px 1px 2px $main_color;
+    padding-left: 10px;
+  }
 
   &-name {
     font-size: 2.4rem;
@@ -102,6 +110,7 @@ p {
   .nav {
     position: absolute;
     top: 0;
+    right: 0;
     display: inline-block;
     width: 60vw;
     background-color: transparent;
@@ -122,7 +131,7 @@ p {
   }
   .ytworks-btn {
     display: flex;
-    padding: 0 auto;
+    justify-content: center;
   }
   .btn-YT {
     margin: 0 0 0 32px;
