--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ img {
 
 .nav {
   position: fixed;
-  left: 0;
   bottom: 0;
   width: 100%;
   border: 1px solid #333333;
@@ -284,9 +283,9 @@ p {
 }
 
 .prof-list {
-  border-left: 3px solid #ffffff;
   text-shadow: 1px 1px 2px #333333;
   padding-left: 10px;
+  display: relative;
 }
 
 .prof-name {
@@ -377,7 +376,6 @@ p {
     width: 60vw;
     background-color: transparent;
     border: none;
-    margin-left: 40vw;
   }
   .nav-icon {
     display: none;
