--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -23,6 +23,55 @@
   }
 }
 
+.checkbox {
+  &-icon {
+    /* □ */
+    position: absolute;
+    top: -1px; /* 上からの位置 */
+    left: 0;
+    height: 20px; /* 大きさ */
+    width: 20px; /* 大きさ */
+    border: solid 1px #333333; /* 線 */
+    border-radius: 2px;
+    box-sizing: border-box;
+    &:after {
+      /* ✓ */
+      content: '';
+      position: absolute;
+      left: 4px; /* チェックの位置 */
+      top: -1px; /* チェックの位置 */
+      width: 6px; /* チェックの大きさ */
+      height: 10px; /* チェックの大きさ */
+      border: solid #fff;
+      border-width: 0 3px 3px 0;
+      transform: rotate(45deg);
+      opacity: 0; /* 透明にしておく */
+    }
+  }
+
+  &-box {
+    display: block;
+    position: relative;
+    margin: 0 16px 16px 0;
+    padding-left: 28px;
+    cursor: pointer;
+    user-select: none; /* テキストの選択を防ぐ */
+    input {
+      /* inputは非表示にする */
+      display: none;
+    }
+    input:checked + .checkbox-icon {
+      /* チェックが入ったときの□ */
+      background: $main_color; /* チェック時の色 */
+      border-color: $main_color; /* チェック時の色 */
+    }
+    /* チェックが入ったときの✓ */
+    input:checked + .checkbox-icon:after {
+      opacity: 1; /* 透明を解除 */
+    }
+  }
+}
+
 textarea {
   width: 100%;
   height: 80px;
