--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,7 @@
 @import 'works';
 @import 'blog';
 @import 'contact';
+
 .top-header {
   height: 0;
   /* 表示画像の高さ ÷ 表示画像の幅 × 100 */
@@ -144,4 +145,8 @@ p {
   .checkbox {
     display: flex;
   }
+}
+
+.swiper-container {
+  margin-bottom: 32px;
 }
