--- a/css/style.css
+++ b/css/style.css
@@ -91,17 +91,41 @@ footer small {
 
 .sitelogo-top {
   font-family: "Allura", cursive;
-  font-size: clamp(3.2rem, 30vw, 12rem);
+  font-size: 5rem;
+}
+
+@media screen and (min-width: 600px) {
+  .sitelogo-top {
+    font-size: 10rem;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .sitelogo-top {
+    font-size: 14rem;
+  }
 }
 
 .sitelogo-bottom {
   font-family: "Allura", cursive;
   color: #ffffff;
   text-shadow: 1px 1px 2px #333333;
-  font-size: calc(6rem + (10 - 6) * ((100vw - 30rem) / (120 - 30)));
+  font-size: 5rem;
   position: absolute;
   top: 10px;
   left: 10vw;
+}
+
+@media screen and (min-width: 600px) {
+  .sitelogo-bottom {
+    font-size: 10rem;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .sitelogo-bottom {
+    font-size: 14rem;
+  }
 }
 
 .title-top {
@@ -129,6 +153,25 @@ footer small {
           box-sizing: border-box;
   width: 160px;
   height: 40px;
+}
+
+.btn-red {
+  display: inline-block;
+  font-size: 1.6rem;
+  text-align: center;
+  line-height: 1em;
+  cursor: pointer;
+  color: #ffffff;
+  background: #ff0000;
+  padding: 12px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 160px;
+  height: 40px;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
 
 .about {
@@ -185,6 +228,10 @@ footer small {
       grid-template-columns: repeat(1, 1fr);
   row-gap: 32px;
   margin-bottom: 32px;
+}
+
+.works-image {
+  cursor: pointer;
 }
 
 .works-para {
@@ -335,6 +382,13 @@ textarea {
   position: relative;
 }
 
+@media screen and (min-width: 1025px) {
+  .top-header {
+    height: 500px;
+    padding: 0;
+  }
+}
+
 h3 {
   font-size: 1.6rem;
   font-weight: bold;
@@ -361,18 +415,58 @@ p {
 
 .prof-list {
   text-shadow: 1px 1px 2px #333333;
-  padding-left: 10px;
+  padding-left: 8px;
   display: relative;
 }
 
+@media screen and (min-width: 600px) {
+  .prof-list {
+    padding-left: 10px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .prof-list {
+    padding-left: 12px;
+  }
+}
+
 .prof-name {
-  font-size: 2.4rem;
-  margin-bottom: 12px;
+  font-size: 1.6rem;
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 600px) {
+  .prof-name {
+    font-size: 2.4rem;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .prof-name {
+    font-size: 2.8rem;
+    margin-bottom: 12px;
+  }
 }
 
 .prof-work {
   font-size: 1.6rem;
-  margin-bottom: 12px;
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 600px) {
+  .prof-work {
+    font-size: 2.4rem;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .prof-work {
+    font-size: 2.8rem;
+    margin-bottom: 12px;
+  }
 }
 
 .prof-icon {
@@ -382,8 +476,20 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-size: 2.4rem;
+  font-size: 1.6rem;
   max-width: 100px;
+}
+
+@media screen and (min-width: 600px) {
+  .prof-icon {
+    font-size: 2.4rem;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .prof-icon {
+    font-size: 2.8rem;
+  }
 }
 
 .top-about {
@@ -427,7 +533,7 @@ p {
   margin-bottom: 32px;
 }
 
-.btn-YT {
+.btn-yt {
   margin-top: 16px;
 }
 
@@ -473,7 +579,7 @@ p {
         -ms-flex-pack: center;
             justify-content: center;
   }
-  .btn-YT {
+  .btn-yt {
     margin: 0 0 0 32px;
   }
   footer {
@@ -488,5 +594,78 @@ p {
 
 .swiper-container {
   margin-bottom: 32px;
+}
+
+.swiper-button-next {
+  color: #ffffff;
+}
+
+.swiper-button-prev {
+  color: #ffffff;
+}
+
+.toggle-input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.toggle-label {
+  width: 32px;
+  height: 16px;
+  background: #ccc;
+  position: relative;
+  display: inline-block;
+  border-radius: 46px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.toggle-label:after {
+  content: '';
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 100%;
+  left: 0;
+  top: 0;
+  z-index: 2;
+  background: #fff;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.toggle-input:checked + .toggle-label {
+  background-color: #333333;
+}
+
+.toggle-input:checked + .toggle-label:after {
+  left: 16px;
+}
+
+.toggle-switch {
+  position: relative;
+  width: 32px;
+  height: 16px;
+  margin: auto;
+}
+
+.light-theme {
+  background: #fff;
+  color: #333;
+}
+
+.dark-theme {
+  background: #000;
+  color: #ddd;
 }
 /*# sourceMappingURL=style.css.map */
