--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,10 @@
   background-image: url(../Image/Top-Mainvisual.jpg);
   background-size: cover;
   position: relative;
+  @include min-screen($pc) {
+    height: 500px;
+    padding: 0;
+  }
 }
 
 h3 {
@@ -39,23 +43,51 @@ p {
 
   &-list {
     text-shadow: 1px 1px 2px $main_color;
-    padding-left: 10px;
+    padding-left: 8px;
     display: relative;
+    @include min-screen($tablet) {
+      padding-left: 10px;
+    }
+    @include min-screen($pc) {
+      padding-left: 12px;
+    }
   }
 
   &-name {
-    font-size: 2.4rem;
-    margin-bottom: 12px;
+    font-size: 1.6rem;
+    margin-bottom: 8px;
+    @include min-screen($tablet) {
+      font-size: 2.4rem;
+      margin-bottom: 10px;
+    }
+    @include min-screen($pc) {
+      font-size: 2.8rem;
+      margin-bottom: 12px;
+    }
   }
   &-work {
-    font-size: $font_size;
-    margin-bottom: 12px;
+    font-size: 1.6rem;
+    margin-bottom: 8px;
+    @include min-screen($tablet) {
+      font-size: 2.4rem;
+      margin-bottom: 10px;
+    }
+    @include min-screen($pc) {
+      font-size: 2.8rem;
+      margin-bottom: 12px;
+    }
   }
   &-icon {
     display: flex;
     justify-content: space-between;
-    font-size: 2.4rem;
+    font-size: 1.6rem;
     max-width: 100px;
+    @include min-screen($tablet) {
+      font-size: 2.4rem;
+    }
+    @include min-screen($pc) {
+      font-size: 2.8rem;
+    }
   }
 }
 
@@ -91,7 +123,7 @@ p {
   }
 }
 
-.btn-YT {
+.btn-yt {
   margin-top: 16px;
 }
 
@@ -134,7 +166,7 @@ p {
     display: flex;
     justify-content: center;
   }
-  .btn-YT {
+  .btn-yt {
     margin: 0 0 0 32px;
   }
 
@@ -147,6 +179,88 @@ p {
   }
 }
 
-.swiper-container {
-  margin-bottom: 32px;
+// @media (prefers-color-scheme: dark) {
+//   body {
+//     background-color: #000;
+//     color: #fff;
+//   }
+// }
+
+//スライダー
+.swiper {
+  &-container {
+    margin-bottom: 32px;
+  }
+  &-button {
+    &-next {
+      color: $sub_color;
+    }
+    &-prev {
+      color: $sub_color;
+    }
+  }
+}
+
+// input
+.toggle {
+  &-input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    opacity: 0;
+    cursor: pointer;
+  }
+  //label
+  &-label {
+    width: 32px;
+    height: 16px;
+    background: #ccc;
+    position: relative;
+    display: inline-block;
+    border-radius: 46px;
+    transition: 0.4s;
+    box-sizing: border-box;
+    &:after {
+      content: '';
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      border-radius: 100%;
+      left: 0;
+      top: 0;
+      z-index: 2;
+      background: #fff;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+      transition: 0.4s;
+    }
+  }
+  // input:ckeecked
+  &-input {
+    &:checked {
+      + .toggle-label {
+        background-color: #333333;
+        &:after {
+          left: 16px;
+        }
+      }
+    }
+  }
+  &-switch {
+    position: relative;
+    width: 32px;
+    height: 16px;
+    margin: auto;
+  }
+}
+
+.light-theme {
+  background: #fff;
+  color: #333;
+}
+.dark-theme {
+  background: #000;
+  color: #ddd;
 }
