--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,181 @@ textarea {
   margin-bottom: 32px;
 }
 
+.modal {
+  display: none;
+}
+
+.modal.is-open {
+  display: block;
+}
+
+.modal-overlay {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -webkit-transition: opacity 200ms linear;
+  transition: opacity 200ms linear;
+}
+
+.modal-innercontainer {
+  background-color: #fff;
+  border-radius: 6px;
+  max-height: 90vh;
+  padding: 5vw;
+  -webkit-transform: translateY(24px);
+          transform: translateY(24px);
+  -webkit-transition: -webkit-transform 300ms ease-in-out;
+  transition: -webkit-transform 300ms ease-in-out;
+  transition: transform 300ms ease-in-out;
+  transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
+  width: 80%;
+  max-width: 640px;
+}
+
+.modal-close {
+  text-align: right;
+  margin-bottom: 8px;
+}
+
+.modal-iframe {
+  position: relative;
+  width: 100%;
+  padding: calc(315 / 560 * 100%) 0 0;
+  margin-bottom: 16px;
+}
+
+.modal-iframe iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-title {
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.modal-company {
+  text-align: center;
+}
+
+/* アニメーション */
+.modal[aria-hidden='false'] .modal-overlay {
+  -webkit-animation: fadeIn 300ms ease-in-out forwards;
+          animation: fadeIn 300ms ease-in-out forwards;
+}
+
+.modal[aria-hidden='false'] .modal-container {
+  -webkit-animation: slideIn 300ms ease-in-out forwards;
+          animation: slideIn 300ms ease-in-out forwards;
+}
+
+.modal[aria-hidden='true'] .modal-overlay {
+  -webkit-animation: fadeOut 300ms ease-in-out forwards;
+          animation: fadeOut 300ms ease-in-out forwards;
+}
+
+.modal[aria-hidden='true'] .modal-container {
+  -webkit-animation: slideOut 300ms ease-in-out forwards;
+          animation: slideOut 300ms ease-in-out forwards;
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes slideIn {
+  from {
+    -webkit-transform: translateY(24px);
+            transform: translateY(24px);
+  }
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes slideIn {
+  from {
+    -webkit-transform: translateY(24px);
+            transform: translateY(24px);
+  }
+  to {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes slideOut {
+  from {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  to {
+    -webkit-transform: translateY(24px);
+            transform: translateY(24px);
+  }
+}
+
+@keyframes slideOut {
+  from {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  to {
+    -webkit-transform: translateY(24px);
+            transform: translateY(24px);
+  }
+}
+
 .top-header {
   height: 0;
   /* 表示画像の高さ ÷ 表示画像の幅 × 100 */
