--- a/css/_works.scss
+++ b/css/_works.scss
@@ -3,6 +3,10 @@
   grid-template-columns: repeat(1, 1fr);
   row-gap: 32px;
   margin-bottom: 32px;
+  @include min-screen($pc) {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 32px;
+  }
 }
 
 .works {
@@ -23,12 +27,5 @@
   &-vpworks {
     margin: 0 auto 96px;
     text-align: center;
-  }
-}
-
-@media screen and (min-width: 1025px) {
-  .container {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 32px;
   }
 }
