--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,15 @@ footer small {
   margin-bottom: 32px;
 }
 
+@media screen and (min-width: 1025px) {
+  .container {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -webkit-column-gap: 32px;
+            column-gap: 32px;
+  }
+}
+
 .works-image {
   cursor: pointer;
 }
@@ -248,15 +257,6 @@ footer small {
 .bottom-vpworks {
   margin: 0 auto 96px;
   text-align: center;
-}
-
-@media screen and (min-width: 1025px) {
-  .container {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -webkit-column-gap: 32px;
-            column-gap: 32px;
-  }
 }
 
 .blog-article {
@@ -830,19 +830,79 @@ p {
 }
 
 .toggle-switch {
-  position: relative;
   width: 32px;
   height: 16px;
-  margin: auto;
+  margin-left: 8px;
 }
 
-.light-theme {
-  background: #fff;
-  color: #333;
+.darkmode {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: bold;
+  position: absolute;
+  top: 4px;
+  right: 4px;
 }
 
-.dark-theme {
-  background: #000;
-  color: #ddd;
+@media screen and (min-width: 1025px) {
+  .darkmode {
+    font-size: 1.4rem;
+    position: absolute;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    top: 12px;
+    left: 12px;
+  }
+}
+
+.darkmode-text {
+  color: #ffffff;
+  text-shadow: 1px 1px 2px #333333;
+}
+
+.dark-maintheme {
+  background: #000000;
+  color: #ffffff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.dark-navtheme {
+  background: #000000;
+  border: #ffffff;
+}
+
+.dark-proftheme {
+  color: #ffffff;
+  background: #333333;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.light-maintheme {
+  background: #ffffff;
+  color: #333333;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.light-navtheme {
+  background: #ffffff;
+  border: #000000;
+}
+
+.light-proftheme {
+  color: #000000;
+  background: #ffffff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 /*# sourceMappingURL=style.css.map */
