--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -72,6 +72,10 @@
   }
 }
 
+input {
+  width: 100%;
+}
+
 textarea {
   width: 100%;
   height: 80px;
@@ -80,4 +84,8 @@ textarea {
   box-sizing: border-box;
   resize: none;
   margin-bottom: 32px;
+}
+
+.btn-form {
+  text-align: center;
 }
