--- a/css/style.css
+++ b/css/style.css
@@ -259,9 +259,29 @@ footer small {
   text-align: center;
 }
 
+.blog-bottom {
+  margin-bottom: 96px;
+}
+
+.blog-container {
+  margin-bottom: 96px;
+}
+
 .blog-article {
-  border: 1px solid #333333;
-  padding: 5vw;
+  margin-bottom: 32px;
+}
+
+.blog-image {
+  margin-bottom: 16px;
+}
+
+.blog-title {
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+
+.blog-btn {
+  text-align: center;
 }
 
 .form {
@@ -363,6 +383,10 @@ footer small {
   /* 透明を解除 */
 }
 
+input {
+  width: 100%;
+}
+
 textarea {
   width: 100%;
   height: 80px;
@@ -372,6 +396,10 @@ textarea {
           box-sizing: border-box;
   resize: none;
   margin-bottom: 32px;
+}
+
+.btn-form {
+  text-align: center;
 }
 
 .modal {
@@ -774,11 +802,11 @@ p {
 }
 
 .swiper-button-next {
-  color: #ffffff;
+  color: #ffffff !important;
 }
 
 .swiper-button-prev {
-  color: #ffffff;
+  color: #ffffff !important;
 }
 
 .toggle-input {
@@ -877,10 +905,18 @@ p {
 
 .dark-navtheme {
   background: #000000;
-  border: #ffffff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .dark-proftheme {
+  color: #ffffff;
+  background: #333333;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.dark-modaltheme {
   color: #ffffff;
   background: #333333;
   -webkit-transition: 0.5s;
@@ -896,7 +932,8 @@ p {
 
 .light-navtheme {
   background: #ffffff;
-  border: #000000;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .light-proftheme {
