--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,10 @@ footer small {
   margin: 0 auto 96px;
 }
 
+.media-site {
+  text-decoration: underline;
+}
+
 .container {
   display: -ms-grid;
   display: grid;
@@ -288,7 +292,7 @@ footer small {
 }
 
 .blog-title {
-  font-size: 1.6rem;
+  font-size: 2.4rem;
   font-weight: bold;
 }
 
